Fixing project detail display to show the correct collaborators

--- a/src/main/resources/templates/project_detail.html
+++ b/src/main/resources/templates/project_detail.html
@@ -35,10 +35,10 @@
                     </div>
                     <div class="roles-collaborators">
                         <h3>Roles &amp; Collaborators</h3>
-                        <h3 th:if="${#lists.isEmpty(roles)}" th:text="'No roles selected! Go to Edit Projects to add roles!'"></h3>
-                        <div class="list-item" th:each="role : ${roles}">
-                            <span class="primary" th:text="${role.name}">Developer</span>
-                            <span class="secondary" th:text="${default_collaborator.name}">Michael Pemulis</span>
+                        <h3 th:if="${#lists.isEmpty(project.rolesNeeded)}" th:text="'No roles selected! Go to Edit Projects to add roles!'"></h3>
+                        <div class="list-item" th:each="roleCollabEntry : ${roleCollabMapping}">
+                            <span class="primary" th:text="${roleCollabEntry.key.name}">Developer</span>
+                            <span class="secondary" th:text="${roleCollabEntry.value.name}">Michael Pemulis</span>
                         </div>
                     </div>
                     <div class="actions">
