--- a/src/main/resources/static/css/site.css
+++ b/src/main/resources/static/css/site.css
@@ -469,5 +469,21 @@ form .add-new-collaborator .button {
     float: left;
 }
 
+.flash {
+    padding: 1rem 2rem;
+    border-radius: 4px;
+    font-size: 18px;
+}
+
+.flash.success {
+    background-color: #7f9e40;
+    color: #f3f6ee;
+}
+
+.flash.failure {
+    background-color: #ac4343;
+    color: #f2e2e2;
+}
+
 
 
