--- a/src/main/resources/templates/collaborator_detail.html
+++ b/src/main/resources/templates/collaborator_detail.html
@@ -20,7 +20,7 @@
 </header>
 <nav>
     <ul>
-        <li><a th:href=@{/projects}>Projects</a></li>
+        <li><a th:href="@{/projects}">Projects</a></li>
         <li class="selected"><a th:href="@{/collaborators}">Collaborators</a></li>
         <li><a th:href="@{/roles}">Roles</a></li>
     </ul>
@@ -40,6 +40,9 @@
                     </select>
                 </div>
                 <div class = "error-message" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
+            </div>
+            <div th:fragment="flash" th:if="${flash != null}" class="container">
+                <div class="flash" th:classappend="${#strings.toLowerCase(flash.status)}" th:text="${flash.message}" ></div>
             </div>
                 <div class="actions-role-detail">
                     <button class="button" >Update</button>
