--- a/src/main/resources/templates/collaborators.html
+++ b/src/main/resources/templates/collaborators.html
@@ -6,8 +6,8 @@
         <title>InstaTeam</title>
         <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-        <link rel="stylesheet" href="css/normalize.css"/>
-        <link rel="stylesheet" href="css/site.css"/>
+        <link rel="stylesheet" href="/css/normalize.css"/>
+        <link rel="stylesheet" href="/css/site.css"/>
     </head>
     <body>
         <header>
@@ -30,13 +30,14 @@
                 <form th:action="@{/collaborators}" method="post" th:object="${collaborator}">
                     <input type="hidden" th:field="*{id}"/>
                     <h2>Manage Collaborators</h2>
+                    <h3 th:if="${#lists.isEmpty(collaborators)}" th:text="'No collaborators created! Add one at bottom of the page!'"></h3>
                     <ul class="checkbox-list">
-                        <li th:each="collaborator: ${collaborators}">
+                        <li th:each="collaborator: ${collaborators}" th:if="${collaborator.name} != 'Unallocated'? _">
                             <a th:href="@{|/collaborators/${collaborator.id}/edit|}" th:text="${collaborator.name}"></a>
                             <div class="custom-select">
                                 <span class="dropdown-arrow"></span>
                                 <select>
-                                    <option th:text="${collaborator.role.name}">Developer</option>
+                                    <option th:text="${collaborator.role != null} ? ${collaborator.role.name} : 'null value!'">Developer</option>
                                 </select>
                             </div>
                         </li>
